@@ -1,8 +1,4 @@
 FROM openjdk:17-jdk-slim
-
+WORKDIR /app
 COPY target/ShoppingAPI-0.0.1-SNAPSHOT.jar app.jar
-COPY .env .env
-
-EXPOSE 8080
-
-ENTRYPOINT ["java", "--add-opens=java.base/java.io=ALL-UNNAMED", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
